Source/JavaScriptCore/bytecode/InlineCacheCompiler.h
@@ -239,7 +239,9 @@ public:
 private:
     InlineCacheHandler()
         : Base(0)
-    { }
+    {
+        disableThreadingChecks();
+    }
 
     InlineCacheHandler(Ref<InlineCacheHandler>&&, Ref<PolymorphicAccessJITStubRoutine>&&, std::unique_ptr<StructureStubInfoClearingWatchpoint>&&, unsigned callLinkInfoCount, CacheType);
 
